fix text weirdness on mobile

--- a/src/components/daopages/daopages.css
+++ b/src/components/daopages/daopages.css
@@ -114,6 +114,13 @@ max-width: 1745px;
 }
 
 .sub-text {
-  margin: auto;
-  width: 50%
+  padding-top: 5px;
+  padding-bottom: 10px;
+}
+
+@media screen and (min-width: 1400px) {
+  .sub-text {
+    margin: auto;
+    width: 50% 
+  }
 }
